--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,12 @@
 
     <groupId>denispavlov</groupId>
     <artifactId>work_project</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
+    <modules>
+        <module>hibernate</module>
+    </modules>
     <build>
         <sourceDirectory>src/main/kotlin</sourceDirectory>
 <!--        <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>-->
@@ -47,6 +52,7 @@
             </plugin>
         </plugins>
     </build>
+
 
     <properties>
         <!--db-->
